# cloud

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  diesel.toml  flake.nix
.github/workflows/: publish.yml  release.yml
cloud-lib/: Cargo.toml  README.md
cloud-lib/src/: error.rs  lib.rs
cloud-macro/: Cargo.toml
cloud-macro/src/: lib.rs
migrations/2023-06-24-211342_create_wasm/: down.sql  up.sql
src/: database.rs  lib.rs  main.rs  models.rs  schema.rs  wasm.rs
web/: .prettierrc  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
web/src/: app.d.ts  app.html  app.postcss
web/src/lib/: form.ts
web/src/routes/: +error.svelte  +layout.svelte  +page.svelte
web/src/routes/guide/: +page.svelte
web/src/routes/run/: +page.svelte
web/src/routes/upload/: +page.svelte
