[package]
name = "cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
# web assembly
wasmer = "4.0"
wasmer-cache = "4.0"
wasmer-wasix = "0.9"

# web server
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.28", features = ["full"] }

# axum
axum-error = "0.2"

# database
diesel_migrations = "2.1"
diesel = { version = "2.1", features = ["sqlite"] }
deadpool-diesel = { version = "0.4", features = ["sqlite"] }
libsqlite3-sys = { version = "*", features = ["bundled"] } 
serde = { version = "1.0.164", features = ["derive"] }
axum = "0.6.18"
