[package]
name = "cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
# web assembly
wasmer = "4.0"
wasmer-cache = "4.0"
wasmer-wasix = "0.9"

# web server
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.28", features = ["full"] }

# axum
axum-error = "0.2"
axum = { version = "0.6", features = ["multipart"] }

# database
diesel_migrations = "2.1"
diesel = { version = "2.1", features = ["sqlite"] }
deadpool-diesel = { version = "0.4", features = ["sqlite"] }
libsqlite3-sys = { version = "*", features = ["bundled"] } 

# other
serde = { version = "1.0", features = ["derive"] }
eyre = "0.6.8"
