[package]
name = "cloud"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
# web assembly
wasmer = "4.0"
wasmer-cache = "4.0"
wasmer-wasix = "0.9"
serde_json = "1.0"
rmp-serde = "1.1"
byteorder = "1.4"

# web server
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.28", features = ["full"] }

# axum
axum-error = "0.2"
axum = { version = "0.6", features = ["multipart"] }

# database
diesel_migrations = "2.1"
diesel = { version = "2.1", features = ["sqlite"] }
deadpool-diesel = { version = "0.4", features = ["sqlite"] }
libsqlite3-sys = { version = "*", features = ["bundled"] } 

# other
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.4.1", features = ["cors"] }

# embed sveltekit
rust-embed = "6.7"
mime_guess = "2.0"
