[package]
name = "cloud-lib"
version = "0.1.0"
edition = "2021"
authors = ["Knarkzel <knarkzel@gmail.com>"]

[features]
json = ["serde_json"]

[dependencies]
rmp-serde = "1.1"
cloud-macro = { version = "0.1", path = "../cloud-macro" }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
