[package]
name = "cloud-lib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/cloud-lib"
authors = ["Knarkzel <knarkzel@gmail.com>"]
description = "Library for self-hosted WebAssembly cloud"

[features]
json = ["serde_json"]

[dependencies]
rmp-serde = "1.1"
cloud-macro = "0.1"
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
