[package]
name = "cloud-macro"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/cloud-macro"
authors = ["Knarkzel <knarkzel@gmail.com>"]
description = "Macro for cloud-lib"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
